# CMakeSonar-Benchmark

./: README.md  benchmark.json
cmake_projects/CppKAI/: .gitignore  .gitmodules  .ycm_extra_conf.py  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.in  CONSOLE_NETWORKING.md  Makefile  README.md  REVIEW.md  TEST_SUMMARY.md  TODO.md  architecture.dot  b  demo_console_communication.sh  demo_network.sh  output.ansi  r  tidy
cmake_projects/CppKAI/Doc/: Architecure.md  BUILD.md  ClosuresVsContinuations.md  ColorOutput.md  CommonLanguageSystem.md  ConnectionTesting.md  Console.md  ContinuationControl.md  DisabledTestsAnalysis.md  DoWhileCombinedTestsDescription.md  DoWhileStatus.md  Documentation.md  EventExample.cpp  EventSystem.md  Install.md  LanguageGuide.md  Languages.md  LogFormat.md  NetworkArchitecture.md  NetworkCalculationTest.md  NetworkDocumentation.md  NetworkIteration.md  NetworkPerformance.md  NetworkSecurity.md  NetworkTauInterfaces.md  Networking.md  NetworkingChanges.md  NullRegistryFix.md  OUT_OF_SOURCE_BUILD.md  PeerToPeerNetworking.md  PeerToPeerSummary.md  PiTutorial.md  README.md  Rho-Analysis.md  Rho-Findings.md  Rho-Fix-Documentation.md  Rho-Fix.md  Rho-Issues.md  Rho-Regression-Analysis.md  RhoLanguage.md  (+25 more)
cmake_projects/CppKAI/Examples/: CMakeLists.txt  ModernCppDemo.cpp  README.md  foreach_examples.pi  test_foreach.pi
cmake_projects/CppKAI/Examples/Tau/: Calculator.tau  ChatService.tau  FileService.tau  GameServer.tau  README.md
cmake_projects/CppKAI/Include/: README.md  rang.hpp
cmake_projects/CppKAI/Include/KAI/: README.md
cmake_projects/CppKAI/Scripts/: README.md  analyze_complexity.py  analyze_test_history.sh  build.sh  build_and_test_network.sh  buildtau.sh  calc_test.sh  clean_and_build.sh  clean_build.sh  complexity_config.json  p2p_test.sh  p2p_test_dynamic.sh  p2p_test_simple.sh  p2p_test_standalone.sh  remove_claude_refs.sh  run_all_tests.sh  run_chat_tests.sh  run_connection_tests.sh  run_console_demo.sh  run_fixed_tests.sh  run_minimal_connection_demo.sh  run_rho_demo.sh  run_rho_tests.sh  run_tau_connection_tests.sh  test_tau.sh  test_tau_interfaces.sh  test_tau_network.sh
cmake_projects/CppKAI/Scripts/network/: README.md  automated_demo.sh  run_peers.sh
cmake_projects/CppKAI/Source/App/: CMakeLists.txt  README.md
cmake_projects/CppKAI/Test/: CMakeLists.txt  DebugDoWhile.cpp  DoWhileStandaloneTest.cpp  ForLoopStandaloneTest.cpp  LoggingTest.cpp  Makefile  README.md  RhoDebugTest.cpp  RhoSyntaxTest.rho  SimpleNetworkGenerate.tau  SimpleSmartPointerTest.cpp  SmartPointerTest.cpp  TestNetworkGenerate.tau  TestParser.cpp  TestRhoSyntax.cpp  TestRhoWhitespace.cpp  TestShellCommands.cpp  VerySimple.tau
cmake_projects/CppKAI/Test/Common/: MyTestStruct.cpp  TestCommon.cpp
cmake_projects/CppKAI/Test/Console/: CMakeLists.txt  InteractiveTests.txt  Makefile  README.md  RunConsoleTests.sh  TestAdvancedZshFeatures.cpp  TestConsoleNetworking.cpp  TestConsoleZsh.py  TestConsoleZshFeatures.cpp  demo_zsh_features.txt
cmake_projects/CppKAI/Test/Examples/: CMakeLists.txt  ChatDemoAdvanced.cpp  ChatExample.cpp  ColorExample.cpp  Makefile  SimpleColorExample.cpp
cmake_projects/CppKAI/Test/Include/: CoreTestCommon.h  TestCommon.h  TestConsoleHelper.h  TestLangCommon.h  TestRhoScriptRunner.h
cmake_projects/CppKAI/Test/Language/: CMakeLists.txt  CTestTestfile.cmake  Makefile  MultiLanguageIntegrationTests.cpp  README.md  TestLangCommon.cpp  TestPi[1]_include.cmake  TestPi[1]_tests.cmake  TestRho[1]_include.cmake  TestRho[1]_tests.cmake  TestTau[1]_include.cmake  TestTau[1]_tests.cmake
cmake_projects/CppKAI/Test/LogTest/: CMakeLists.txt  Makefile  main.cpp
cmake_projects/CppKAI/Test/Network/: AdvancedNetworkTests.cpp  CMakeLists.txt  CalculationTest.cpp  ChatAdvancedTests.cpp  ChatDemo.rho  ChatFunctionalityTests.cpp  ChatProxyGenerationTest.cpp  ConsoleConnectionTest.cpp  ICQStyleChatTest.cpp  IntegratedConsoleTest.cpp  Makefile  README.md  TauNetworkCommunicationTest.cpp  TestGenerateProxy.cpp  TestNode.cpp
cmake_projects/CppKAI/Test/Performance/: CMakeLists.txt  PerformanceBenchmarkTests.cpp  SimplifiedPerformanceTests.cpp
cmake_projects/CppKAI/Test/ShellCommandTests/: README.md  demo_comprehensive.txt  demo_simple.txt  run_shell_tests.sh  test_basic_clean.txt  test_basic_shell_commands.txt  test_complex_shell_commands.txt  test_embedded_commands.txt  test_error_cases.txt  test_rho_language.txt
cmake_projects/CppKAI/Test/Source/: CMakeLists.txt  CoreAdvancedTests.cpp  CoreContainerTests.cpp  CoreObjectTests.cpp  CorePointerTests.cpp  CoreRegistryTests.cpp  CoreTypeTests.cpp  EventHelper.h  FixedCoreSuite.cpp  FixedCoreSuiteTest.cmake  Main.cpp  Makefile  RakNetStubSimple.cpp  TestAdditionalCore.cpp  TestAdditionalStringOps.cpp  TestArray.cpp  TestClassScripting.cpp  TestEvents.cpp  TestFunction.cpp  TestGarbageCollection.cpp  TestMap.cpp  TestMemoryManagement.cpp  TestRakNetStub.cpp  TestRakNetStubSimple.cpp  TestReflection.cpp  TestRegistryOperations.cpp  TestSerialization.cpp  TestSmartPointers.cpp
cmake_projects/CppKAI/Test/Standalone/: CMakeLists.txt
cmake_projects/CppKAI/Test/Window/: CMakeLists.txt  CTestTestfile.cmake  Makefile  MockExecutorWindow.cpp  MockExecutorWindow.h  NoConsoleWindow.h  README.md  TestMinimal  (+15 more)
cmake_projects/CppKAI/Testing/: run_rho_tests.sh  run_tests
cmake_projects/CppKAI/config/: README.md  client_config.json  client_test_config.json  minimal_config.json  peer1_config.json  peer2_config.json  server_config.json  server_test_config.json
cmake_projects/CppKAI/resources/: README.md
cmake_projects/csp-fork/: .clang-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  CppCheckSuppressions.txt  Doxyfile  README.rst  output.ansi  requirements.txt
cmake_projects/csp-fork/cmake/: FindCcLint.cmake  FindClangFormat.cmake  FindCoverage.cmake  FindCppCheck.cmake  FindFlawFinder.cmake  FindHtmlCoverage.cmake  FindSphinx.cmake  FindValgrind.cmake
cmake_projects/csp-fork/csp/: CMakeLists.txt
cmake_projects/csp-fork/docs/: CMakeLists.txt  conf.py  constraint.rst  index.rst  lib.rst  problem.rst  solver.rst
(+894 files in other folders)
